--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "flowbite-react": "^0.10.2",
     "nanoid": "^5.0.3",
     "react": "^18.2.0",
+    "react-audio-visualize": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-h5-audio-player": "^3.9.3",
     "react-icons": "^4.11.0",
